--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
+  "name": "soundshare-frontend",
+  "version": "1.0.0",
   "homepage": "https://<your-github-username>.github.io/soundshare/",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
+  },
+  "dependencies": {
+    // your other dependencies here
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
