--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
-    // your other dependencies here
+    "react": "^18.0.0", // or whatever version you are using
+    "react-dom": "^18.0.0", // same here
+    "react-router-dom": "^6.0.0" // if you're using React Router for navigation
+    // Add any other dependencies your project requires
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "react-scripts": "5.0.0" // or the version of react-scripts you're using
   }
 }
