--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "soundshare-frontend",
   "version": "1.0.0",
-  "homepage": "https://nabthedev.github.io/soundshare/",
+  "homepage": "https://<your-github-username>.github.io/soundshare/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -15,6 +15,6 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.3",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.1"
   }
 }
