--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "soundshare-frontend",
   "version": "1.0.0",
-  "homepage": "https://nabthedev.github.io/soundshare/",
+  "homepage": "https://<your-github-username>.github.io/soundshare/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
